--- a/app/src/main/res/layout/announcement_browsing.xml
+++ b/app/src/main/res/layout/announcement_browsing.xml
@@ -7,6 +7,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/aList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/buttons" />
+        android:layout_height="match_parent"/>
 </LinearLayout>
