--- a/app/src/main/res/layout/activity_create_query.xml
+++ b/app/src/main/res/layout/activity_create_query.xml
@@ -1,155 +1,243 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/tips_background"
     tools:context=".activities.CreateQuery">
 
-    <TextView
-        android:id="@+id/textView10"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:text="Create Your Query Below"
-        android:textColor="@android:color/holo_orange_light"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:text="Choose the type of query"
-        android:textColor="@color/navy_blue"
-        android:textSize="16sp"
-        android:textStyle="bold"/>
-
-
-    <CheckBox
-        android:id="@+id/cbMealAllowance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_allowance" />
-
-    <CheckBox
-        android:id="@+id/cbAccommodationOrTransportAllowance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/accommodation_or_transport_allowance" />
-
-
-    <CheckBox
-        android:id="@+id/cbBookAllowance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/book_allowance" />
-
-    <!--    <CheckBox-->
-    <!--        android:id="@+id/cbGeneralQuery"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="- General Query" />-->
-
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:text="Describe your selected query in detail:"
-        android:textColor="#000000"
-        android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/etQueryMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:ems="10"
-            android:layout_gravity="center_horizontal"
-            android:inputType="textPersonName" />
-
-
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/buttons"
-            android:drawableLeft="@drawable/save"
-            android:text="Save"
-            android:layout_gravity="center_horizontal"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tvlist_of_queries"
+            android:id="@+id/textView10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="List of queries:"
-            android:textStyle="bold" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvlist_of_queries"/>
-        </FrameLayout>
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:text="Create Your Query Below"
+            android:textColor="#000000"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
+            android:id="@+id/radioGroupLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:padding="5dp"
+            android:background="@drawable/app_background"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10">
 
-            <Button
-                android:id="@+id/btnDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="1"
-                android:text="Delete" />
+            <RadioGroup
+                android:id="@+id/rgQueryType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/btnSubmit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="1"
-                android:text="@string/submit" />
+                <RadioButton
+                    android:id="@+id/rbMealAllowance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/meal_allowance"
+                    android:checked="true"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <RadioButton
+                    android:id="@+id/rbAccommodationOrTransportAllowance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/accommodation_or_transport_allowance"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <RadioButton
+                    android:id="@+id/rbBookAllowance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/book_allowance"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+            </RadioGroup>
+
+            <!--    <CheckBox-->
+            <!--        android:id="@+id/cbMealAllowance"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:text="@string/meal_allowance"-->
+            <!--        android:textSize="18sp"-->
+            <!--        android:textStyle="bold"/>-->
+
+            <!--    <CheckBox-->
+            <!--        android:id="@+id/cbAccommodationOrTransportAllowance"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:text="@string/accommodation_or_transport_allowance"-->
+            <!--        android:textSize="18sp"-->
+            <!--        android:textStyle="bold"/>-->
+
+            <!--    <CheckBox-->
+            <!--        android:id="@+id/cbBookAllowance"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:text="@string/book_allowance"-->
+            <!--        android:textSize="18sp"-->
+            <!--        android:textStyle="bold"/>-->
 
         </LinearLayout>
 
 
+        <LinearLayout
+            android:id="@+id/queryMessageLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroupLayout">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvTypeMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:textSize="18sp"
+                android:text="Click on this text to type/edit the message that explains your Query in detail:"
+                android:gravity="center_horizontal"/>
 
-</LinearLayout>
+            <!--    <TextView-->
+            <!--        android:id="@+id/textView17"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:layout_marginTop="10dp"-->
+            <!--        android:gravity="center_horizontal"-->
+            <!--        android:text="@string/describe_your_selected_query_in_detail"-->
+            <!--        android:textColor="#000000"-->
+            <!--        android:textSize="16sp" />-->
+
+
+            <!--    <EditText-->
+            <!--        android:id="@+id/etQueryMessage"-->
+            <!--        android:layout_width="match_parent"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:layout_marginTop="5dp"-->
+            <!--        android:layout_marginStart="10dp"-->
+            <!--        android:layout_marginEnd="10dp"-->
+            <!--        android:ems="10"-->
+            <!--        android:layout_gravity="center_horizontal"-->
+            <!--        android:inputType="textPersonName" />-->
+
+            <TextView
+                android:id="@+id/tvQueryMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:gravity="center_horizontal"
+                android:textColor="@color/navy_blue"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+
+
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/buttons"
+                android:drawableLeft="@drawable/save"
+                android:text="Save"
+                android:layout_gravity="center_horizontal"/>
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/app_background"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/queryMessageLayout">
+
+            <TextView
+                android:id="@+id/tvlist_of_queries"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/list_of_queries"
+                android:textStyle="bold" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:padding="2dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvlist_of_queries"/>
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/delete"
+                    android:text="@string/delete" />
+
+                <Button
+                    android:id="@+id/btnSubmit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/submit"
+                    android:text="@string/submit" />
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</ScrollView>
