--- a/app/src/main/res/layout/activity_create_request.xml
+++ b/app/src/main/res/layout/activity_create_request.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/app_background"
     tools:context=".activities.CreateRequest">
 
     <TextView
@@ -13,18 +14,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
-        android:text="Create A Request Below"
-        android:textColor="@android:color/holo_orange_light"
+        android:text="@string/create_a_request_below"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="20dp"
+        android:padding="20dp"
         android:layout_marginBottom="24dp"
+        android:background="@drawable/app_background"
         android:orientation="vertical">
 
         <TextView
@@ -32,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Choose the request type:"
+            android:text="@string/choose_the_request_type"
             android:textColor="@color/navy_blue"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -51,15 +54,20 @@
             android:id="@+id/textView14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="This allows the Student to access and download their financial statementThis allows the Student to access and download their financial statement"
-            android:textSize="16sp" />
+            android:text="@string/this_allows_the_student_to_access_and_download_their_financial_statement"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnViewFinancialStatement"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="View Financial Statement" />
+            android:text="@string/view_financial_statement" />
+
+        <Button
+            android:id="@+id/btnDownloadStatement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/download_financial_statement" />
 
         <TextView
             android:id="@+id/tvFinancialClearance"
@@ -75,15 +83,14 @@
             android:id="@+id/textView16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="This allows the Student to request for financial clearance"
+            android:text="@string/this_allows_the_student_to_request_for_financial_clearance"
             android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnRequestFinancialClearance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="Request Financial Clearance" />
+            android:text="@string/request_financial_clearance" />
 
     </LinearLayout>
 
@@ -94,5 +101,5 @@
         android:layout_marginStart="85dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="85dp"
-        android:text="Cancel - Back To Home Page" />
+        android:text="@string/cancel_back_to_home_page" />
 </LinearLayout>
