--- a/app/src/main/res/layout/activity_student_home_page.xml
+++ b/app/src/main/res/layout/activity_student_home_page.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/tips_background"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.StudentHomePage"
-    android:background="@drawable/new_gradient_background"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -28,7 +29,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <include
                 android:id="@+id/my_toolbar"
@@ -37,8 +38,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:navigationIcon="@drawable/menu" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/greeting_layout"
@@ -50,22 +50,8 @@
                 app:layout_constraintTop_toBottomOf="@id/my_toolbar">
 
                 <TextView
-                    android:id="@+id/tvGreeting"
-                    style="@style/tv_greeting"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="55dp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/amaranth"
-                    android:foregroundGravity="left"
-                    android:textSize="30sp" />
-
-                <TextView
                     android:id="@+id/tvFullName"
                     style="@style/tv_fullname"
-                    android:layout_marginStart="-90dp"
-                    android:layout_marginEnd="48dp"
-                    android:fontFamily="@font/berkshire_swash"
-                    android:foregroundGravity="left"
                     android:textSize="30sp" />
 
             </LinearLayout>
@@ -116,7 +102,6 @@
                     app:cardCornerRadius="5dp"
                     app:cardElevation="5dp"
                     app:cardUseCompatPadding="false"
-                    app:cardBackgroundColor="@color/dark_red"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -128,7 +113,6 @@
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvAnnounce"
-                        android:background="@drawable/buttons"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:clickable="true"
@@ -176,7 +160,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
                             android:text="@string/create_a_query"
-                            android:textColor="@color/purple_700"
+                            android:textColor="@color/navy_blue"
                             android:textStyle="bold" />
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
@@ -208,7 +192,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:text="@string/create_a_request"
-                            android:textColor="#ED8C10" />
+                            android:textColor="@color/navy_blue"
+                            android:textStyle="bold"/>
 
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
@@ -251,8 +236,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-                            android:text="Create A Booking"
-                            android:textColor="#871A49"
+                            android:text="@string/create_a_booking"
+                            android:textColor="@color/navy_blue"
                             android:textStyle="bold" />
 
 
@@ -287,7 +272,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
                             android:text="@string/fill_form"
-                            android:textColor="#628F0B"
+                            android:textColor="@color/navy_blue"
                             android:textStyle="bold" />
 
                     </FrameLayout>
@@ -297,4 +282,21 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/sHomeProgressBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/app_background"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginStart="80dp" />
+    </LinearLayout>
+
 </androidx.drawerlayout.widget.DrawerLayout>
+
