--- a/app/src/main/res/layout/announcement_row.xml
+++ b/app/src/main/res/layout/announcement_row.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="95dp"
         android:layout_margin="5dp"
-        android:background="@drawable/buttons"
+        android:background="@android:color/holo_orange_light"
         app:cardBackgroundColor="@android:color/holo_orange_light"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
@@ -78,18 +78,18 @@
                     android:text="TextView"
                     android:textColor="#FFFFFF" />
 
-                <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:gravity="center_horizontal"
-                    android:text="TextView"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center_horizontal"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
