--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:orientation="vertical"
-    android:background="@android:color/holo_orange_light"
+    android:background="@color/navy_blue"
     android:gravity="bottom"
     android:padding="20dp">
 
@@ -21,13 +21,13 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:fontFamily="@font/berkshire_swash"
-        android:textColor="@color/navy_blue"/>
+        android:textColor="@android:color/holo_orange_light"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="www.stufa.com"
-        android:textColor="@color/navy_blue"
+        android:textColor="@android:color/holo_orange_light"
         android:textSize="14sp"
         android:textStyle="bold" />
 
