--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/navy_blue</item>
         <!-- Customize your theme here. -->
         <!-- Customize your theme here. -->
         <item name="windowNoTitle">true</item>
@@ -19,6 +19,14 @@
 
         <!-- Used for Animations. -->
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowAnimationStyle">@style/tips_animation</item>
+
 
     </style>
+
+    <style name="tips_animation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
 </resources>
